--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   flutter_local_notifications: ^19.4.2
+  permission_handler: ^11.3.1
   timezone: ^0.10.1
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +42,8 @@ dependencies:
   cloud_firestore: ^6.0.1
   flutter_localizations:
     sdk: flutter
+  google_sign_in: 6.2.0
+  firebase_auth: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -55,10 +58,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
